# id-validator

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: check.rs  lib.rs  mock.rs  region.rs
